--- a/manifest.json
+++ b/manifest.json
@@ -10,6 +10,7 @@
     },
 
     "permissions": [
+        "storage",
         "activeTab",
         "https://ajax.googleapis.com/",
         "https://*/*",
